--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
                     <li><a href="about.html">ABOUT</a></li>
                     <li class="has-child"><a href="#">MEDIA</a>
                       <ul class="submenu">
-                        <li class="submenu-item"><a href="causes.html">EVENTS</a></li>
-                        <li class="submenu-item"><a href="causes-single.html">FUND RAISING</a></li>
+                        <li class="submenu-item"><a href="events.html">EVENTS</a></li>
+                        <li class="submenu-item"><a href="fundraising.html">FUND RAISING</a></li>
                       </ul>
                     </li>
-                    <li><a href="gallery.html">VOLUNTEER</a></li>
+                    <li><a href="volunteer.html">VOLUNTEER</a></li>
                     <li><a href="contact.html">CONTACT US</a></li>
                     </ul>
                     <a href="#" class="btn btn-lg btn-secondary hidden-xs bounceInUp animated slow " data-toggle="modal" data-target="#donateModal">DONATE NOW</a>
