edited home ,about us,volunteer page

--- a/events.html
+++ b/events.html
@@ -85,7 +85,7 @@
 
                   </button>
 
-                  <a class="navbar-brand" href="index.html"><img src="assets/images/sadaka-logo.png" alt=""></a>
+                  <a class="navbar-brand1" href="index.html"><img src="assets/images/sadaka-logo.png" alt=""></a>
 
                 </div>
 
@@ -114,7 +114,7 @@
 
         </nav>
 
-    </header> <!-- /. main-header -->
+    </header> 
 
 
 	<div class="page-heading text-center">
@@ -129,8 +129,151 @@
 		</div>
 
 	</div>
+    <div class="section-home home-reasons">
 
-	<div class="main-container">
+        <div class="container">
+
+            <div class="row">
+
+                <div class="col-md-6">
+
+                    <div class="reasons-col animate-onscroll fadeIn">
+
+                        <img src="assets/images/reasons/we-fight-togother.jpg" alt="">
+
+                        <div class="reasons-titles">
+
+                            <h3 class="reasons-title">We fight together</h3>
+                            <h5 class="reason-subtitle">We are humans</h5>
+
+                        </div>
+
+                        <div class="on-hover hidden-xs">
+
+                                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur praesentium, itaque facilis nesciunt ab omnis cumque similique ipsa veritatis perspiciatis, harum ad at nihil molestias, dignissimos sint consequuntur. Officia, fuga.</p>
+
+
+                                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur praesentium, itaque facilis nesciunt ab omnis cumque similique ipsa veritatis perspiciatis, harum ad at nihil molestias, dignissimos sint consequuntur. Officia, fuga.</p>
+
+                                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur praesentium, itaque facilis nesciunt ab omnis cumque similique ipsa veritatis perspiciatis, harum ad at nihil molestias, dignissimos sint consequuntur. Officia, fuga.</p>
+
+                        </div>
+                    </div>
+
+                </div>
+
+
+                <div class="col-md-6">
+
+                    <div class="reasons-col animate-onscroll fadeIn">
+
+                        <img src="assets/images/reasons/we-care-about.jpg" alt="">
+
+                        <div class="reasons-titles">
+
+                            <h3 class="reasons-title">WE care about others</h3>
+                            <h5 class="reason-subtitle">We are humans</h5>
+
+                        </div>
+
+                        <div class="on-hover hidden-xs">
+
+                                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur praesentium, itaque facilis nesciunt ab omnis cumque similique ipsa veritatis perspiciatis, harum ad at nihil molestias, dignissimos sint consequuntur. Officia, fuga.</p>
+
+
+                                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur praesentium, itaque facilis nesciunt ab omnis cumque similique ipsa veritatis perspiciatis, harum ad at nihil molestias, dignissimos sint consequuntur. Officia, fuga.</p>
+
+                                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur praesentium, itaque facilis nesciunt ab omnis cumque similique ipsa veritatis perspiciatis, harum ad at nihil molestias, dignissimos sint consequuntur. Officia, fuga.</p>
+
+                        </div>
+
+
+                    </div>
+
+                </div>
+
+
+            </div>
+
+
+
+        </div>
+
+
+    </div> <!-- /.home-reasons -->
+    <div class="section-home home-reasons">
+
+        <div class="container">
+
+            <div class="row">
+
+                <div class="col-md-6">
+
+                    <div class="reasons-col animate-onscroll fadeIn">
+
+                        <img src="assets/images/reasons/we-fight-togother.jpg" alt="">
+
+                        <div class="reasons-titles">
+
+                            <h3 class="reasons-title">We fight together</h3>
+                            <h5 class="reason-subtitle">We are humans</h5>
+
+                        </div>
+
+                        <div class="on-hover hidden-xs">
+
+                                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur praesentium, itaque facilis nesciunt ab omnis cumque similique ipsa veritatis perspiciatis, harum ad at nihil molestias, dignissimos sint consequuntur. Officia, fuga.</p>
+
+
+                                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur praesentium, itaque facilis nesciunt ab omnis cumque similique ipsa veritatis perspiciatis, harum ad at nihil molestias, dignissimos sint consequuntur. Officia, fuga.</p>
+
+                                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur praesentium, itaque facilis nesciunt ab omnis cumque similique ipsa veritatis perspiciatis, harum ad at nihil molestias, dignissimos sint consequuntur. Officia, fuga.</p>
+
+                        </div>
+                    </div>
+
+                </div>
+
+
+                <div class="col-md-6">
+
+                    <div class="reasons-col animate-onscroll fadeIn">
+
+                        <img src="assets/images/reasons/we-care-about.jpg" alt="">
+
+                        <div class="reasons-titles">
+
+                            <h3 class="reasons-title">WE care about others</h3>
+                            <h5 class="reason-subtitle">We are humans</h5>
+
+                        </div>
+
+                        <div class="on-hover hidden-xs">
+
+                                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur praesentium, itaque facilis nesciunt ab omnis cumque similique ipsa veritatis perspiciatis, harum ad at nihil molestias, dignissimos sint consequuntur. Officia, fuga.</p>
+
+
+                                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur praesentium, itaque facilis nesciunt ab omnis cumque similique ipsa veritatis perspiciatis, harum ad at nihil molestias, dignissimos sint consequuntur. Officia, fuga.</p>
+
+                                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur praesentium, itaque facilis nesciunt ab omnis cumque similique ipsa veritatis perspiciatis, harum ad at nihil molestias, dignissimos sint consequuntur. Officia, fuga.</p>
+
+                        </div>
+
+
+                    </div>
+
+                </div>
+
+
+            </div>
+
+
+
+        </div>
+
+
+    </div> 
+	<!--<div class="main-container">
 
 		<div class="our-causes fadeIn animated">
 
@@ -166,7 +309,7 @@
 
 
 
-		                    </div> <!-- /.cause -->
+		                    </div> 
 
 		                </div>
 
@@ -195,7 +338,7 @@
 
 
 
-		                    </div> <!-- /.cause -->
+		                    </div> 
 
 		                </div>
 
@@ -225,7 +368,7 @@
 
 
 
-		                    </div> <!-- /.cause -->
+		                    </div> 
 
 		                </div>
 
@@ -254,7 +397,7 @@
 
 
 
-		                    </div> <!-- /.cause -->
+		                    </div> 
 
 		                </div>
 
@@ -285,7 +428,7 @@
 
 
 
-		                    </div> <!-- /.cause -->
+		                    </div> 
 
 		                </div>
 
@@ -314,7 +457,7 @@
 
 
 
-		                    </div> <!-- /.cause -->
+		                    </div> 
 
 		                </div>
 
@@ -344,7 +487,7 @@
 
 
 
-		                    </div> <!-- /.cause -->
+		                    </div> 
 
 		                </div>
 
@@ -373,7 +516,7 @@
 
 
 
-		                    </div> <!-- /.cause -->
+		                    </div> 
 
 		                </div>
 
@@ -382,12 +525,12 @@
 
 	         </div>
 
-	    </div> <!-- /.our-causes -->
+            </div>
 
 
 
 
-	</div> <!-- /.main-container  -->
+	</div>  -->
 
 
     <footer class="main-footer">
