--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
                   <ul class="nav navbar-nav">
 
-                    <li><a class="is-active" href="index.html">HOME</a></li>
+                    <li><a  href="index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT</a></li>
                     <li class="has-child"><a href="#">MEDIA</a>
                       <ul class="submenu">
@@ -366,8 +366,81 @@
 
 
     </div> <!-- /.home-reasons -->
+    <div class="section-home home-reasons">
 
-    <div class="section-home our-causes animate-onscroll fadeIn">
+        <div class="container">
+
+            <div class="row">
+
+                <div class="col-md-6">
+
+                    <div class="reasons-col animate-onscroll fadeIn">
+
+                        <img src="assets/images/reasons/we-fight-togother.jpg" alt="">
+
+                        <div class="reasons-titles">
+
+                            <h3 class="reasons-title">We fight together</h3>
+                            <h5 class="reason-subtitle">We are humans</h5>
+
+                        </div>
+
+                        <div class="on-hover hidden-xs">
+
+                                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur praesentium, itaque facilis nesciunt ab omnis cumque similique ipsa veritatis perspiciatis, harum ad at nihil molestias, dignissimos sint consequuntur. Officia, fuga.</p>
+
+
+                                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur praesentium, itaque facilis nesciunt ab omnis cumque similique ipsa veritatis perspiciatis, harum ad at nihil molestias, dignissimos sint consequuntur. Officia, fuga.</p>
+
+                                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur praesentium, itaque facilis nesciunt ab omnis cumque similique ipsa veritatis perspiciatis, harum ad at nihil molestias, dignissimos sint consequuntur. Officia, fuga.</p>
+
+                        </div>
+                    </div>
+
+                </div>
+
+
+                <div class="col-md-6">
+
+                    <div class="reasons-col animate-onscroll fadeIn">
+
+                        <img src="assets/images/reasons/we-care-about.jpg" alt="">
+
+                        <div class="reasons-titles">
+
+                            <h3 class="reasons-title">WE care about others</h3>
+                            <h5 class="reason-subtitle">We are humans</h5>
+
+                        </div>
+
+                        <div class="on-hover hidden-xs">
+
+                                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur praesentium, itaque facilis nesciunt ab omnis cumque similique ipsa veritatis perspiciatis, harum ad at nihil molestias, dignissimos sint consequuntur. Officia, fuga.</p>
+
+
+                                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur praesentium, itaque facilis nesciunt ab omnis cumque similique ipsa veritatis perspiciatis, harum ad at nihil molestias, dignissimos sint consequuntur. Officia, fuga.</p>
+
+                                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur praesentium, itaque facilis nesciunt ab omnis cumque similique ipsa veritatis perspiciatis, harum ad at nihil molestias, dignissimos sint consequuntur. Officia, fuga.</p>
+
+                        </div>
+
+
+                    </div>
+
+                </div>
+
+
+            </div>
+
+
+
+        </div>
+
+
+    </div> <!-- /.home-reasons -->
+
+
+    <!-- <div class="section-home our-causes animate-onscroll fadeIn">
 
         <div class="container">
 
@@ -400,7 +473,7 @@
 
 
 
-                    </div> <!-- /.cause -->
+                    </div> 
 
                 </div>
 
@@ -429,7 +502,7 @@
 
 
 
-                    </div> <!-- /.cause -->
+                    </div> 
 
                 </div>
 
@@ -459,7 +532,7 @@
 
 
 
-                    </div> <!-- /.cause -->
+                    </div> 
 
                 </div>
 
@@ -488,7 +561,7 @@
 
 
 
-                    </div> <!-- /.cause -->
+                    </div> 
 
                 </div>
 
@@ -496,7 +569,7 @@
 
         </div>
 
-    </div> <!-- /.our-causes -->
+    </div>  -->
 
 
 
