--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
 
                   </button>
 
-                  <a class="navbar-brand" href="index.html"><img style="height: 70px; width: 200px;" src="assets/images/logo.jpeg" alt=""></a>
+                  <a class="navbar-brand1" href="index.html"><img style="height: 70px; width: 200px;" src="assets/images/logo.jpeg" alt=""></a>
 
                 </div>
 
@@ -88,7 +88,7 @@
 
                   <ul class="nav navbar-nav">
 
-                    <li><a class="is-active" href="index.html">HOME</a></li>
+                    <li><a  href="index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT</a></li>
                     <li class="has-child"><a href="#">MEDIA</a>
                       <ul class="submenu">
@@ -139,7 +139,7 @@
 
 				<div class="col-md-6">
 
-					<h2 class="title-style-2">ABOUT SADAKA <span class="title-under"></span></h2>
+					<h2 class="title-style-2">ABOUT TRAVANCORE-TRUST <span class="title-under"></span></h2>
 
 					<p>
 						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus, nulla quae possimus id fugit totam perspiciatis ad consequatur natus dolores unde ipsa, architecto, dignissimos corrupti explicabo provident debitis suscipit, beatae!
