--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
 
                         <ul class="list-unstyled list-inline header-contact">
                             <li> <i class="fa fa-phone"></i> <a href="tel:">+212 658 986 213 </a> </li>
-                             <li> <i class="fa fa-envelope"></i> <a href="mailto:contact@sadaka.org">contact@sadaka.org</a> </li>
+                             <li> <i class="fa fa-envelope"></i> <a href="mailto:contact@Travancore.org">contact@Travancore.org</a> </li>
                        </ul> <!-- /.header-contact  -->
 
                     </div>
@@ -80,7 +80,7 @@
 
                   </button>
 
-                  <a class="navbar-brand" href="index.html"><img style="height: 70px; width: 200px;" src="assets/images/logo.jpeg" alt=""></a>
+                  <a class="navbar-brand1" href="index.html"><img style="height: 70px; width: 200px;" src="assets/images/logo.jpeg" alt=""></a>
 
                 </div>
 
@@ -88,7 +88,7 @@
 
                   <ul class="nav navbar-nav">
 
-                    <li><a class="is-active" href="index.html">HOME</a></li>
+                    <li><a  href="index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT</a></li>
                     <li class="has-child"><a href="#">MEDIA</a>
                       <ul class="submenu">
@@ -177,9 +177,9 @@
 
 				<div class="col-md-4 col-md-offset-1 col-contact">
 
-					<h2 class="title-style-2"> SADAKA CONTACTS <span class="title-under"></span></h2>
+					<h2 class="title-style-2"> Travancore CONTACTS <span class="title-under"></span></h2>
 					<p>
-						<b>Sadaka</b> ipsum dolor sit amet, consectetur adipiscing elit. Ut at eros rutrum turpis viverra elementum semper quis ex. Donec lorem nulla .
+						<b>Travancore</b> ipsum dolor sit amet, consectetur adipiscing elit. Ut at eros rutrum turpis viverra elementum semper quis ex. Donec lorem nulla .
 					</p>
 
 					<div class="contact-items">
@@ -188,7 +188,7 @@
 							<li class="contact-item"> <span class="contact-icon"> <i class="fa fa-map-marker"></i></span> 135 Hay el nahda, Rabat, Morocco</li>
 							<li class="contact-item"> <span class="contact-icon"> <i class="fa fa-phone"></i></span> 00 210 25 55  55 11</li>
 
-							<li class="contact-item"> <span class="contact-icon"> <i class="fa fa-envelope"></i></span> contact@sadaka.org</li>
+							<li class="contact-item"> <span class="contact-icon"> <i class="fa fa-envelope"></i></span> contact@Travancore.org</li>
 						</ul>
 					</div>
 
@@ -229,7 +229,7 @@
 
                             <div class="footer-content">
                                 <p>
-                                    <strong>Sadaka</strong> ipsum dolor sit amet, consectetur adipiscing elit. Ut at eros rutrum turpis viverra elementum semper quis ex. Donec lorem nulla, aliquam quis neque vel, maximus lacinia urna.
+                                    <strong>Travancore</strong> ipsum dolor sit amet, consectetur adipiscing elit. Ut at eros rutrum turpis viverra elementum semper quis ex. Donec lorem nulla, aliquam quis neque vel, maximus lacinia urna.
                                 </p>
 
                                 <p>
@@ -339,7 +339,7 @@
         <div class="footer-bottom">
 
             <div class="container text-right">
-                Sadaka @ copyrights 2015 - by <a href="http://www.ouarmedia.com" target="_blank">Ouarmedia</a>
+                Travancore @ copyrights 2015 - by <a href="http://www.ouarmedia.com" target="_blank">Ouarmedia</a>
             </div>
         </div>
 
