--- a/volunteer.html
+++ b/volunteer.html
@@ -80,7 +80,7 @@
 
                   </button>
 
-                  <a class="navbar-brand" href="index.html"><img style="height: 70px; width: 200px;" src="assets/images/logo.jpeg" alt=""></a>
+                  <a class="navbar-brand1" href="index.html"><img style="height: 70px; width: 200px;" src="assets/images/logo.jpeg" alt=""></a>
 
                 </div>
 
@@ -117,6 +117,7 @@
   		<div class="container">
 
   			<div class="row">
+                <section>
 
   				<div class="col-md-7 col-sm-12 col-form">
 
@@ -193,7 +194,10 @@
                           <div class="clearfix"></div>
 
   					</form>
-
+                </section>
+                <section>
+                    <img style="height: 70%;width: 40%;" src="assets/images/volunteers/volunteer.jpg" alt="">
+                </section>
   				</div>
         </div>
       </div>
