edited pages index,about,volunteer

--- a/about.html
+++ b/about.html
@@ -166,6 +166,44 @@
 
 			</div> <!-- /.row -->
 
+      <!-- inserting cards again -->
+
+      <div class="row fadeIn animated">
+        <div class="col-md-6">
+
+          <h2 class="title-style-2">ABOUT TRAVANCORE-TRUST <span class="title-under"></span></h2>
+
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus, nulla quae possimus id fugit totam perspiciatis ad consequatur natus dolores unde ipsa, architecto, dignissimos corrupti explicabo provident debitis suscipit, beatae!
+          </p>
+
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi pariatur, voluptatum molestiae voluptas ducimus tempora numquam eligendi quos, quia aut quidem et, odio deleniti amet natus accusamus fugit! Temporibus, tenetur.
+          </p>
+
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse voluptatem, ea, quisquam vero ullam nesciunt recusandae expedita similique nisi! Ducimus, reiciendis, quia. Explicabo minima error excepturi minus, aperiam illum fugit.
+          </p>
+
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi pariatur, voluptatum molestiae voluptas ducimus tempora numquam eligendi quos, quia aut quidem et, odio deleniti amet natus accusamus fugit! Temporibus, tenetur.
+          </p>
+
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse voluptatem, ea, quisquam vero ullam nesciunt recusandae expedita similique nisi! Ducimus, reiciendis, quia. Explicabo minima error excepturi minus, aperiam illum fugit , quia. Explicabo minima error excepturi minus, aperiam illum fugit.
+
+          </p>
+
+        </div>
+
+        <div class="col-md-6">
+
+					<img src="assets/images/about-us.jpg" alt="" class="img-responsive">
+
+				</div>
+
+        </div>
+
 			<div class="section-home about-us">
 
 
