--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                           <p>Lorem ipsum dolor sit amet consect adipisscin elit proin vel lectus ut eta esami vera dolor sit amet consect</p>
 
                         </div>
-                        <a href="#" class="btn btn-primary"> Read more </a>
+                        <a href="about.html" class="btn btn-primary"> Read more </a>
 
                   </div>
 
@@ -240,7 +240,7 @@
                           <p>Lorem ipsum dolor sit amet consect adipisscin elit proin vel lectus ut eta esami vera dolor sit amet consect</p>
 
                         </div>
-                        <a href="#" class="btn btn-primary"> Read more </a>
+                        <a href="donate.html" class="btn btn-primary"> Read more </a>
 
                   </div>
 
@@ -260,7 +260,7 @@
                           <p>Lorem ipsum dolor sit amet consect adipisscin elit proin vel lectus ut eta esami vera dolor sit amet consect</p>
 
                         </div>
-                        <a href="#" class="btn btn-primary"> Read more </a>
+                        <a href="contact.html" class="btn btn-primary"> Read more </a>
 
                   </div>
 
@@ -280,7 +280,7 @@
                           <p>Lorem ipsum dolor sit amet consect adipisscin elit proin vel lectus ut eta esami vera dolor sit amet consect</p>
 
                         </div>
-                        <a href="#" class="btn btn-primary"> Read more </a>
+                        <a href="project.html" class="btn btn-primary"> Read more </a>
 
                   </div>
 
@@ -473,7 +473,7 @@
 
 
 
-                    </div> 
+                    </div>
 
                 </div>
 
@@ -502,7 +502,7 @@
 
 
 
-                    </div> 
+                    </div>
 
                 </div>
 
@@ -532,7 +532,7 @@
 
 
 
-                    </div> 
+                    </div>
 
                 </div>
 
@@ -561,7 +561,7 @@
 
 
 
-                    </div> 
+                    </div>
 
                 </div>
 
