--- a/causes-single.html
+++ b/causes-single.html
@@ -2,7 +2,7 @@
 <html class="no-js">
     <head>
         <meta charset="utf-8">
-        <title>Fund Raising | Charity / Non-profit responsive Bootstrap HTML5 template</title>
+        <title>Single cause | Charity / Non-profit responsive Bootstrap HTML5 template</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -85,7 +85,7 @@
 
                   </button>
 
-                  <a class="navbar-brand1" href="index.html"><img style="height: 70px; width: 200px;" src="assets/images/logo.jpeg" alt=""></a>
+                  <a class="navbar-brand1" href="index.html"><img src="assets/images/sadaka-logo.png" alt=""></a>
 
                 </div>
 
@@ -95,19 +95,7 @@
 
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT</a></li>
-                    <li class="has-child"><a href="#">MEDIA</a>
-                      <ul class="submenu">
-                        <li class="submenu-item"><a href="events.html">EVENTS</a></li>
-                        <li class="submenu-item"><a href="fundraising.html">FUND RAISING</a></li>
-                      </ul>
-                    </li>
-                    <li><a href="volunteer.html">VOLUNTEER</a></li>
-                    <li><a href="contact.html">CONTACT US</a></li>
-                    </ul>
-                    <a href="#" class="btn btn-lg btn-secondary hidden-xs bounceInUp animated slow " data-toggle="modal" data-target="#donateModal">DONATE NOW</a>
-
-
-                    <!-- <li class="has-child "><a class="is-active" href="#">FUND RAISING</a>
+                    <li class="has-child "><a class="is-active" href="#">CAUSES</a>
 
                       <ul class="submenu">
                          <li class="submenu-item"><a href="causes.html">Causes list </a></li>
@@ -116,7 +104,11 @@
                          <li class="submenu-item"><a href="causes-single.html">Single cause </a></li>
                       </ul>
 
-                    </li> -->
+                    </li>
+                    <li><a href="gallery.html">GALLERY</a></li>
+                    <li><a href="contact.html">CONTACT</a></li>
+
+                  </ul>
 
                 </div> <!-- /#navbar -->
 
@@ -134,7 +126,7 @@
 
 		<div class="container zoomIn animated">
 
-			<h1 class="page-title">FUNDRAISING PROGRAMS <span class="title-under"></span></h1>
+			<h1 class="page-title">CAUSE TITLE <span class="title-under"></span></h1>
 			<p class="page-description">
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit Necessitatibus.
 			</p>
@@ -546,12 +538,7 @@
 
         </div>
 
-        <div class="footer-bottom">
-
-            <div class="container text-right">
-                Sadaka @ copyrights 2015 - by <a href="http://www.ouarmedia.com" target="_blank">Ouarmedia</a>
-            </div>
-        </div>
+        
 
     </footer>
 
