--- a/events.html
+++ b/events.html
@@ -85,7 +85,7 @@
 
                   </button>
 
-                  <a class="navbar-brand1" href="index.html"><img src="assets/images/sadaka-logo.png" alt=""></a>
+                  <a class="navbar-brand1" href="index.html"><img style="height: 70px; width: 200px;" src="assets/images/logo.jpeg" alt=""></a>
 
                 </div>
 
@@ -114,7 +114,7 @@
 
         </nav>
 
-    </header> 
+    </header>
 
 
 	<div class="page-heading text-center">
@@ -272,7 +272,7 @@
         </div>
 
 
-    </div> 
+    </div>
 	<!--<div class="main-container">
 
 		<div class="our-causes fadeIn animated">
@@ -309,7 +309,7 @@
 
 
 
-		                    </div> 
+		                    </div>
 
 		                </div>
 
@@ -338,7 +338,7 @@
 
 
 
-		                    </div> 
+		                    </div>
 
 		                </div>
 
@@ -368,7 +368,7 @@
 
 
 
-		                    </div> 
+		                    </div>
 
 		                </div>
 
@@ -397,7 +397,7 @@
 
 
 
-		                    </div> 
+		                    </div>
 
 		                </div>
 
@@ -428,7 +428,7 @@
 
 
 
-		                    </div> 
+		                    </div>
 
 		                </div>
 
@@ -457,7 +457,7 @@
 
 
 
-		                    </div> 
+		                    </div>
 
 		                </div>
 
@@ -487,7 +487,7 @@
 
 
 
-		                    </div> 
+		                    </div>
 
 		                </div>
 
@@ -516,7 +516,7 @@
 
 
 
-		                    </div> 
+		                    </div>
 
 		                </div>
 
