--- a/fundraising.html
+++ b/fundraising.html
@@ -76,6 +76,7 @@
               <div class="container">
 
                 <div class="navbar-header">
+
                   <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
 
                     <span class="sr-only">Toggle navigation</span>
@@ -103,8 +104,9 @@
                     </li>
                     <li><a href="volunteer.html">VOLUNTEER</a></li>
                     <li><a href="contact.html">CONTACT US</a></li>
+                    <li><a href="#" class="btn btn-lg btn-secondary hidden-xs bounceInUp animated slow ">DONATE NOW</a></li> 
                     </ul>
-                    <a href="#" class="btn btn-lg btn-secondary hidden-xs bounceInUp animated slow " data-toggle="modal" data-target="#donateModal">DONATE NOW</a>
+                    <!-- <a href="#" class="btn btn-lg btn-secondary hidden-xs bounceInUp animated slow " data-toggle="modal" data-target="#donateModal">DONATE NOW</a> -->
 
 
                     <!-- <li class="has-child "><a class="is-active" href="#">FUND RAISING</a>
