--- a/volunteer.html
+++ b/volunteer.html
@@ -279,7 +279,7 @@
   					</form>
                 </section>
                 <section>
-                    <img style="height: 70%;width: 40%;" src="assets/images/volunteers/volunteer.jpg" alt="">
+                    <img class="volunteer-image" src="assets/images/volunteers/volunteer.jpg" alt="">
                 </section>
   				</div>
         </div>
