Navbar fixed and image changed

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <nav class="navbar navbar-static-top">
 
-            <div class="navbar-top">
+            <!-- <div class="navbar-top">
 
               <div class="container">
                   <div class="row">
@@ -45,7 +45,7 @@
                         <ul class="list-unstyled list-inline header-contact">
                             <li> <i class="fa fa-phone"></i> <a href="tel:">+212 658 986 213 </a> </li>
                              <li> <i class="fa fa-envelope"></i> <a href="mailto:contact@sadaka.org">contact@sadaka.org</a> </li>
-                       </ul> <!-- /.header-contact  -->
+                       </ul>
 
                     </div>
 
@@ -58,7 +58,7 @@
                             <li> <a href="#"> <i class="fa fa-google"></i>  </a> </li>
                             <li> <a href="#"> <i class="fa fa-youtube"></i>  </a> </li>
                             <li> <a href="#"> <i class="fa fa fa-pinterest-p"></i>  </a> </li>
-                       </ul> <!-- /.header-social  -->
+                       </ul>
 
                     </div>
 
@@ -66,7 +66,7 @@
                   </div>
               </div>
 
-            </div>
+            </div> -->
 
             <div class="navbar-main">
 
@@ -82,7 +82,7 @@
 
                   </button>
 
-                  <a class="navbar-brand1" href="index.html"><img style="height: 70px; width: 200px;" src="assets/images/logo.jpeg" alt=""></a>
+                  <a class="navbar-brand" href="index.html"><img class="navbar-img" src="assets/images/logo3.png" alt=""></a>
 
                 </div>
 
@@ -102,8 +102,7 @@
                     <li><a href="volunteer.html">VOLUNTEER</a></li>
                     <li><a href="contact.html">CONTACT US</a></li>
                     </ul>
-                    <a href="#" class="btn btn-lg btn-secondary hidden-xs bounceInUp animated slow " data-toggle="modal" data-target="#donateModal">DONATE NOW</a>
-                </div> <!-- /#navbar -->
+                  </div> <!-- /#navbar -->
 
               </div> <!-- /.container -->
 
