logo fixed in all pages

--- a/about.html
+++ b/about.html
@@ -33,82 +33,48 @@
 
         <nav class="navbar navbar-static-top">
 
-            <div class="navbar-top">
+          <div class="navbar-main">
 
-              <div class="container">
-                  <div class="row">
+            <div class="container">
 
-                    <div class="col-sm-6 col-xs-12">
+              <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
 
-                        <ul class="list-unstyled list-inline header-contact">
-                            <li> <i class="fa fa-phone"></i> <a href="tel:">+212 658 986 213 </a> </li>
-                             <li> <i class="fa fa-envelope"></i> <a href="mailto:contact@sadaka.org">contact@sadaka.org</a> </li>
-                       </ul> <!-- /.header-contact  -->
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
 
-                    </div>
+                </button>
 
-                    <div class="col-sm-6 col-xs-12 text-right">
+                <a class="navbar-brand" href="index.html"><img class="navbar-img" src="assets/images/logo3.png" alt=""></a>
 
-                        <ul class="list-unstyled list-inline header-social">
-
-                            <li> <a href="#"> <i class="fa fa-facebook"></i> </a> </li>
-                            <li> <a href="#"> <i class="fa fa-twitter"></i>  </a> </li>
-                            <li> <a href="#"> <i class="fa fa-google"></i>  </a> </li>
-                            <li> <a href="#"> <i class="fa fa-youtube"></i>  </a> </li>
-                            <li> <a href="#"> <i class="fa fa fa-pinterest-p"></i>  </a> </li>
-                       </ul> <!-- /.header-social  -->
-
-                    </div>
-
-
-                  </div>
               </div>
 
-            </div>
+              <div id="navbar" class="navbar-collapse collapse pull-right">
 
-            <div class="navbar-main">
+                <ul class="nav navbar-nav">
 
-              <div class="container">
-
-                <div class="navbar-header">
-                  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-
-                  </button>
-
-                  <a class="navbar-brand1" href="index.html"><img style="height: 70px; width: 200px;" src="assets/images/logo.jpeg" alt=""></a>
-
-                </div>
-
-                <div id="navbar" class="navbar-collapse collapse pull-right">
-
-                  <ul class="nav navbar-nav">
-
-                    <li><a  href="index.html">HOME</a></li>
-                    <li><a class="is-active" href="about.html">ABOUT</a></li>
-                    <li class="has-child"><a href="#">MEDIA</a>
-                      <ul class="submenu">
-                        <li class="submenu-item"><a href="events.html">EVENTS</a></li>
-                        <li class="submenu-item"><a href="fundraising.html">FUND RAISING</a></li>
-                      </ul>
-                    </li>
-                    <li><a href="project.html">PROJECTS</a></li>
-                    <li><a href="volunteer.html">VOLUNTEER</a></li>
-                    <li><a href="contact.html">CONTACT US</a></li>
+                  <li><a class="is-active" href="index.html">HOME</a></li>
+                  <li><a href="about.html">ABOUT</a></li>
+                  <li class="has-child"><a href="#">MEDIA</a>
+                    <ul class="submenu">
+                      <li class="submenu-item"><a href="events.html">EVENTS</a></li>
+                      <li class="submenu-item"><a href="fundraising.html">FUND RAISING</a></li>
                     </ul>
-                    <a href="#" class="btn btn-lg btn-secondary hidden-xs bounceInUp animated slow " data-toggle="modal" data-target="#donateModal">DONATE NOW</a>
+                  </li>
+                  <li><a href="project.html">PROJECTS</a></li>
+                  <li><a href="volunteer.html">VOLUNTEER</a></li>
+                  <li><a href="contact.html">CONTACT US</a></li>
+                  </ul>
                 </div> <!-- /#navbar -->
 
-              </div> <!-- /.container -->
+            </div> <!-- /.container -->
 
-            </div> <!-- /.navbar-main -->
+          </div> <!-- /.navbar-main -->
 
 
-        </nav>
+      </nav>
 
     </header> <!-- /. main-header -->
 
