Added donate now button to all pages

--- a/about.html
+++ b/about.html
@@ -264,6 +264,7 @@
 
 		</div> <!-- /.about-us -->
 
+    <a class="btn btn-lg FAB" href="#">Donate<br>Now!</a>
 
 	    <div class="our-team animate-onscroll fadeIn">
 
