--- a/donate.html
+++ b/donate.html
@@ -77,6 +77,8 @@
       </nav>
     </header> <!-- /. main-header -->
 
+        <a class="btn btn-lg FAB" href="#">Donate<br>Now!</a>
+
     <div id="homeCarousel" class="carousel slide carousel-home" data-ride="carousel">
 
           <!-- Indicators -->
