--- a/events.html
+++ b/events.html
@@ -81,6 +81,9 @@
       </nav>
 
     </header>
+
+        <a class="btn btn-lg FAB" href="#">Donate<br>Now!</a>
+
 	<div class="page-heading text-center">
 
 		<div class="container zoomIn animated">
