--- a/causes-single.html
+++ b/causes-single.html
@@ -122,6 +122,8 @@
     </header> <!-- /. main-header -->
 
 
+        <a class="btn btn-lg FAB" href="#">Donate<br>Now!</a>
+
 	<div class="page-heading text-center">
 
 		<div class="container zoomIn animated">
@@ -538,7 +540,7 @@
 
         </div>
 
-        
+
 
     </footer>
 
