--- a/fundraising.html
+++ b/fundraising.html
@@ -82,6 +82,8 @@
 
     </header> <!-- /. main-header -->
 
+        <a class="btn btn-lg FAB" href="#">Donate<br>Now!</a>
+
 
 	<div class="page-heading text-center">
 
