--- a/index.html
+++ b/index.html
@@ -398,6 +398,7 @@
                     </div>
 
                 </div>
+                <a class="btn btn-lg FAB" href="#">Donate<br>Now!</a>
 
 
                 <div class="col-md-6">
