--- a/project.html
+++ b/project.html
@@ -79,6 +79,8 @@
     </header> <!-- /. main-header -->
 
 
+        <a class="btn btn-lg FAB" href="#">Donate<br>Now!</a>
+
 	<div class="page-heading text-center">
 
 		<div class="container zoomIn animated">
