--- a/volunteer.html
+++ b/volunteer.html
@@ -78,6 +78,8 @@
 
     </header> <!-- /. main-header -->
 
+        <a class="btn btn-lg FAB" href="#">Donate<br>Now!</a>
+
     <div id="homeCarousel" class="carousel slide carousel-home" data-ride="carousel">
 
           <!-- Indicators -->
