Updated images and content of about, home and event

--- a/about.html
+++ b/about.html
@@ -55,8 +55,8 @@
 
                 <ul class="nav navbar-nav">
 
-                  <li><a class="is-active" href="index.html">HOME</a></li>
-                  <li><a href="about.html">ABOUT</a></li>
+                  <li><a href="index.html">HOME</a></li>
+                  <li><a class="is-active" href="about.html">ABOUT</a></li>
                   <li class="has-child"><a href="#">MEDIA</a>
                     <ul class="submenu">
                       <li class="submenu-item"><a href="events.html">EVENTS</a></li>
@@ -85,7 +85,7 @@
 
 			<h1 class="page-title">ABOUT US <span class="title-under"></span></h1>
 			<p class="page-description">
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit Necessitatibus.
+				Not only we must be good, we must be GOOD FOR SOMETHING
 			</p>
 
 		</div>
@@ -100,7 +100,7 @@
 
 				<div class="col-md-6">
 
-					<img src="assets/images/about-us.jpg" alt="" class="img-responsive">
+					<img src="assets/images/test-images/240_F_186411793_STZlj8Cc2aqhovZJ5UTFwG2mzaZPtQeB.jpg" alt="" class="img-responsive">
 
 				</div>
 
@@ -108,27 +108,10 @@
 
 					<h2 class="title-style-2">ABOUT TRAVANCORE-TRUST <span class="title-under"></span></h2>
 
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus, nulla quae possimus id fugit totam perspiciatis ad consequatur natus dolores unde ipsa, architecto, dignissimos corrupti explicabo provident debitis suscipit, beatae!
-					</p>
+					<p>We aim to identify, allocate, empower and impart to every children and adult valuable. To set up a comprehensive centre for mental health and substance abuse, integrating psychiatry, clinical psychology and counseling.</p>
 
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi pariatur, voluptatum molestiae voluptas ducimus tempora numquam eligendi quos, quia aut quidem et, odio deleniti amet natus accusamus fugit! Temporibus, tenetur.
-					</p>
-
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse voluptatem, ea, quisquam vero ullam nesciunt recusandae expedita similique nisi! Ducimus, reiciendis, quia. Explicabo minima error excepturi minus, aperiam illum fugit.
-					</p>
-
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi pariatur, voluptatum molestiae voluptas ducimus tempora numquam eligendi quos, quia aut quidem et, odio deleniti amet natus accusamus fugit! Temporibus, tenetur.
-					</p>
-
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse voluptatem, ea, quisquam vero ullam nesciunt recusandae expedita similique nisi! Ducimus, reiciendis, quia. Explicabo minima error excepturi minus, aperiam illum fugit , quia. Explicabo minima error excepturi minus, aperiam illum fugit.
-
-					</p>
-
+					<p>To promote skill development Training programs, motivational class and camps, project preparation, agriculture, diary etc, Marketing support to the needy agriculture groups. Monitoring, auditing and continuous training.</p>
+            <p>To tackle and eliminate poverty by giving each individual, child and adult, the opportunity to learn, develop and contribute their skills to make a better world.</p>
 				</div>
 
 			</div> <!-- /.row -->
@@ -138,9 +121,14 @@
       <div class="row fadeIn animated">
         <div class="col-md-6">
 
-          <h2 class="title-style-2">ABOUT TRAVANCORE-TRUST <span class="title-under"></span></h2>
+          <h2 class="title-style-2"> OUR AIM <span class="title-under"></span></h2>
+          <ul type="circle">
+            <li>To establish, develop, maintain and grant aid in cash or kind to hostels, hospitals, medical colleges, nursing institutions, dispensaries, maternities, child welfare centers and/or such other similar charitable institutions in India for the benefit and use of the general public including rehabilitation centres for nursing HIV infected people and their families providing basic necessities of food, medicine, clothing and shelter</li>
+            <li><b>Sanitation Mission (Waste Management Programme)</b> - To educate the general public regarding solid waste management with a mission to tackle the growing concern of improper garbage disposal. Awareness about the solid waste project, which is a part of a clean world environment, workshops, supervision by the management team experts for setting up its unit on demand.</li>
+            <li><b>Education Support (Vyasa)-</b> Through this service, the trust intends to provide continuing education for the children of economically disadvantaged families. </li>
 
-          <p>
+          </ul>
+          <!-- <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus, nulla quae possimus id fugit totam perspiciatis ad consequatur natus dolores unde ipsa, architecto, dignissimos corrupti explicabo provident debitis suscipit, beatae!
           </p>
 
@@ -159,17 +147,40 @@
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse voluptatem, ea, quisquam vero ullam nesciunt recusandae expedita similique nisi! Ducimus, reiciendis, quia. Explicabo minima error excepturi minus, aperiam illum fugit , quia. Explicabo minima error excepturi minus, aperiam illum fugit.
 
-          </p>
+          </p> -->
 
         </div>
 
         <div class="col-md-6">
-
-					<img src="assets/images/about-us.jpg" alt="" class="img-responsive">
-
+          <p>_____________________
+          </p>
+					<img src="assets/images/test-images/500_F_315222447_X46vxIOPSZ6qse08W7AUFQZeKKsRUGMr.jpg" alt="" class="img-responsive">
 				</div>
-
         </div>
+
+        <div class="row fadeIn animated">
+
+  				<div class="col-md-6">
+            <p>______________________
+            </p>
+  					<img src="assets/images/test-images/240_F_360262037_7rwUYLm6j89qK9PZRudbLRZNr3M8FeqC.jpg" alt="" class="img-responsive">
+
+  				</div>
+
+  				<div class="col-md-6">
+
+  					<h2 class="title-style-2">OUR MISSION <span class="title-under"></span></h2>
+            <ul type="circle">
+              <li>To provide basic necessities to people to help them live, by providing basic healthcare and expensive surgeries</li>
+              <li>To provide the best healthcare as humanly possible for the less fortunate living in this world</li>
+              <li>To take care of abandoned children and abused women and give them a second chance at living life.</li>
+              <li>To establish, maintain or grant aid to homes for the aged, orphanages or other establishments for the relief and help to the poor physically handicapped, disabled or mentally retarded the needy and the destitute, orphans, widows and aged persons and to provide them food, clothing, education or any other help.</li>
+
+            </ul>
+  				</div>
+
+  			</div> <!-- /.row -->
+
 
 			<div class="section-home about-us">
 
