--- a/events.html
+++ b/events.html
@@ -59,9 +59,9 @@
 
                 <ul class="nav navbar-nav">
 
-                  <li><a class="is-active" href="index.html">HOME</a></li>
+                  <li><a href="index.html">HOME</a></li>
                   <li><a href="about.html">ABOUT</a></li>
-                  <li class="has-child"><a href="#">MEDIA</a>
+                  <li class="has-child"><a class="is-active" href="#">MEDIA</a>
                     <ul class="submenu">
                       <li class="submenu-item"><a href="events.html">EVENTS</a></li>
                       <li class="submenu-item"><a href="fundraising.html">FUND RAISING</a></li>
@@ -90,7 +90,7 @@
 
 			<h1 class="page-title">OUR EVENTS <span class="title-under"></span></h1>
 			<p class="page-description">
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit Necessitatibus.
+        small actions <span>&#215;</span> L O T S of P E O P L E = <b>BIG CHANGE</b>
 			</p>
 
 		</div>
@@ -99,29 +99,46 @@
     <section>
 
         <div class="alert alert-danger  "  role="alert">
-         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam fugit, vitae est iure eligendi maiores illo amet id, tenetur voluptas autem rerum blanditiis cumque. Voluptatem consequatur perspiciatis soluta fugiat. Quas?
-        </div>
+          <ul type="square">
+            <li><b>Women Empowerment Programme</b> - A package with a mission to educate and empower women from financially low/weak status by providing training classes and
+  labour units.</li>
+          </ul></div>
+
         <div class="alert alert-info  " role="alert">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci neque corrupti, consectetur tempora vero porro facilis quasi vel. Omnis saepe architecto ipsum blanditiis eaque consequatur, a libero tempore cumque magnam?
-        </div>
+          <ul type="square">
+            <li>To conduct programs for <b>Farmers</b> helping in organic farming, group farming, organic manure supply,organic pesticide supply, terass farming, construction of biogas plants, agriculture labour
+            supply, dairy farming, fish farming, green house farming etc</li>
+          </ul></div>
+
         <div class="alert alert-success" role="alert">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error, tempore aliquid similique est corporis, odit repellat ex ut, sapiente impedit provident expedita distinctio debitis quos saepe temporibus consequuntur consequatur molestiae?
-        </div>
+          <ul type="square">
+            <li>To <b>grant relief and assistance</b> to the needy victims during natural calamities such as famine, earth quake, flood, fire, pestilence etc and to give donations and other assistance to institutions, establishments or persons engaged in such relief work</li>
+          </ul></div>
+
         <div class="alert alert-danger " role="alert">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga dignissimos reiciendis assumenda eos voluptatem odit dicta ipsa molestiae libero animi. Delectus eveniet expedita aliquid ipsum dolores, distinctio necessitatibus ad reprehenderit?
-        </div>
+          <ul type="square">
+            <li>To provide <b>Monetary Assistance</b> to :-
+              <p>i) Deserving students whether they are directly under the care of the trust or not.</p>
+              <p>ii) Deserving children for medical purpose whether they are under the direct care of the trust or not</p>
+              <p>iii) Any destitute</p></li>
+          </ul>
+              </div>
         <div class="alert alert-warning" role="alert">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus, velit ipsam. Tempora, vitae iure, quia excepturi officia quaerat vero nostrum impedit facilis ipsa numquam porro commodi placeat repellendus enim et.
-        </div>
+        <ul type="square">
+          <li><b>Sanitation Mission (Waste Management Programme)-</b> To educate the general public regarding solid waste management with a mission to tackle the growing concern of improper garbage disposal. Awareness about the solid waste project, which is a part of a clean world environment, workshops, supervision by the management team experts for setting up its unit on demand.
+</li>
+        </ul>
+      </div>
         <div class="alert alert-info " role="alert">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus, odit veritatis magni repudiandae eum, molestiae nam id assumenda quia nesciunt ipsum provident numquam totam dolor esse itaque dolorum excepturi. Beatae?
-        </div>
-        <div class="alert alert-danger " role="alert">
+          <ul type="square">
+            <li><b>Medical Support (punarjani)-</b> With this service, the Trust intends to provide medical aid and medicines to financially weaker patients</li>
+          </ul></div>
+        <!-- <div class="alert alert-danger " role="alert">
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos, aspernatur, delectus quasi velit neque quidem perspiciatis veritatis quaerat explicabo voluptatem repudiandae at corrupti pariatur ad. Assumenda eligendi natus ipsa nesciunt!
         </div>
         <div class="alert alert-success " role="alert">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt consequuntur harum porro asperiores ipsum repellat blanditiis consequatur omnis hic cumque, inventore eos. Suscipit atque quae optio odio numquam ex animi?S
-        </div>
+        </div> -->
       </section>
 
     <footer class="main-footer">
