--- a/fundraising.html
+++ b/fundraising.html
@@ -59,9 +59,9 @@
 
                 <ul class="nav navbar-nav">
 
-                  <li><a class="is-active" href="index.html">HOME</a></li>
+                  <li><a  href="index.html">HOME</a></li>
                   <li><a href="about.html">ABOUT</a></li>
-                  <li class="has-child"><a href="#">MEDIA</a>
+                  <li  class="has-child"><a class="is-active" href="#">MEDIA</a>
                     <ul class="submenu">
                       <li class="submenu-item"><a href="events.html">EVENTS</a></li>
                       <li class="submenu-item"><a href="fundraising.html">FUND RAISING</a></li>
