--- a/project.html
+++ b/project.html
@@ -55,7 +55,7 @@
 
                 <ul class="nav navbar-nav">
 
-                  <li><a class="is-active" href="index.html">HOME</a></li>
+                  <li><a  href="index.html">HOME</a></li>
                   <li><a href="about.html">ABOUT</a></li>
                   <li class="has-child"><a href="#">MEDIA</a>
                     <ul class="submenu">
@@ -63,7 +63,7 @@
                       <li class="submenu-item"><a href="fundraising.html">FUND RAISING</a></li>
                     </ul>
                   </li>
-                  <li><a href="project.html">PROJECTS</a></li>
+                  <li><a class="is-active" href="project.html">PROJECTS</a></li>
                   <li><a href="volunteer.html">VOLUNTEER</a></li>
                   <li><a href="contact.html">CONTACT US</a></li>
                   </ul>
