Added cards to events page

--- a/events.html
+++ b/events.html
@@ -23,6 +23,8 @@
         <!-- Template main Css -->
         <link rel="stylesheet" href="assets/css/style.css">
 
+        <link rel="stylesheet" href="assets/css/events-card.css">
+
         <!-- Modernizr -->
         <script src="assets/js/modernizr-2.6.2.min.js"></script>
 
@@ -97,6 +99,73 @@
 
     </div>
     <section>
+      <div class="cols">
+
+      			<div class="col" ontouchstart="this.classList.toggle('hover');">
+      				<div class="container">
+      					<div class="front" style="background-image: url(https://unsplash.it/502/502/)">
+      						<div class="inner">
+      							<p>Strizzes</p>
+                    <span>Lorem ipsum</span>
+      						</div>
+      					</div>
+      					<div class="back">
+      						<div class="inner">
+      							<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+      						</div>
+      					</div>
+      				</div>
+      			</div>
+      			<div class="col" ontouchstart="this.classList.toggle('hover');">
+      				<div class="container">
+      					<div class="front" style="background-image: url(https://unsplash.it/503/503/)">
+      						<div class="inner">
+      							<p>Clossyo</p>
+                    <span>Lorem ipsum</span>
+      						</div>
+      					</div>
+      					<div class="back">
+      						<div class="inner">
+      							<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+      						</div>
+      					</div>
+      				</div>
+      			</div>
+
+      			<div class="col" ontouchstart="this.classList.toggle('hover');">
+      				<div class="container">
+      					<div class="front" style="background-image: url(https://unsplash.it/506/506/)">
+      						<div class="inner">
+      							<p>Acirassi</p>
+                    <span>Lorem ipsum</span>
+      						</div>
+      					</div>
+      					<div class="back">
+      						<div class="inner">
+      							<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+      						</div>
+      					</div>
+      				</div>
+      			</div>
+      			<div class="col" ontouchstart="this.classList.toggle('hover');">
+      				<div class="container">
+      					<div class="front" style="background-image: url(https://unsplash.it/508/508/)">
+      						<div class="inner">
+      							<p>Sohanidd</p>
+                    <span>Lorem ipsum</span>
+      						</div>
+      					</div>
+      					<div class="back">
+      						<div class="inner">
+      							<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+      						</div>
+      					</div>
+      				</div>
+      			</div>
+      		</div>
+</section>
+
+    <!-- <section>
 
         <div class="alert alert-danger  "  role="alert">
           <ul type="square">
@@ -133,13 +202,13 @@
           <ul type="square">
             <li><b>Medical Support (punarjani)-</b> With this service, the Trust intends to provide medical aid and medicines to financially weaker patients</li>
           </ul></div>
-        <!-- <div class="alert alert-danger " role="alert">
+       <div class="alert alert-danger " role="alert">
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos, aspernatur, delectus quasi velit neque quidem perspiciatis veritatis quaerat explicabo voluptatem repudiandae at corrupti pariatur ad. Assumenda eligendi natus ipsa nesciunt!
         </div>
         <div class="alert alert-success " role="alert">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt consequuntur harum porro asperiores ipsum repellat blanditiis consequatur omnis hic cumque, inventore eos. Suscipit atque quae optio odio numquam ex animi?S
-        </div> -->
-      </section>
+        </div>
+      </section> -->
 
     <footer class="main-footer">
 
